[gd_scene load_steps=7 format=3 uid="uid://dwkdkc4usw3yn"]

[ext_resource type="Script" path="res://game/ship/Ship.gd" id="1_p4bv2"]
[ext_resource type="Texture2D" uid="uid://dxf0gvfd80vlt" path="res://assets/sprites/cart/misc/ss_ship_misc.png" id="2_prb85"]
[ext_resource type="PackedScene" uid="uid://capgpw4kxltue" path="res://game/ship/ShipSlot.tscn" id="3_o36rr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lpml2"]
atlas = ExtResource("2_prb85")
region = Rect2(106, 2, 148, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7t37"]
atlas = ExtResource("2_prb85")
region = Rect2(52, 176, 84, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_astbv"]
size = Vector2(38, 26)

[node name="Ship" type="AnimatableBody2D"]
script = ExtResource("1_p4bv2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = SubResource("AtlasTexture_lpml2")

[node name="ShipSlot" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(-8, -31)

[node name="ShipSlot2" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(8, -31)

[node name="ShipSlot3" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(-8, -15)

[node name="ShipSlot4" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(8, -15)

[node name="ShipSlot5" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(8, 1)

[node name="ShipSlot6" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(-8, 1)

[node name="ShipSlot7" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(-8, 17)

[node name="ShipSlot8" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(8, 17)

[node name="ShipSlot9" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(24, -23)

[node name="ShipSlot10" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(24, -7)

[node name="ShipSlot11" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(-24, -6)

[node name="ShipSlot12" parent="Sprite2D" instance=ExtResource("3_o36rr")]
position = Vector2(-24, -22)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(-1, 65)
texture = SubResource("AtlasTexture_j7t37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 52)
shape = SubResource("RectangleShape2D_astbv")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ConstructMenu" parent="." instance_placeholder="res://game/ship/EmptySlotUI.tscn"]
unique_name_in_owner = true
position = Vector2(81, -189)

[node name="RepairMenu" parent="." instance_placeholder="res://game/ship/ConstructedSlotUI.tscn"]
unique_name_in_owner = true
position = Vector2(85, 165)
